# runtime

./: .gitignore  PUBLISHING.md  Package.swift  README.md  package.json  release-targets.yml
.github/workflows/: deprecate-versions.yml  release.yml  unpublish-versions.yml
kanonak-canonical/: .gitignore  README.md
kanonak-canonical/csharp/: README.md
kanonak-canonical/csharp/src/Kanonak.Canonical/: CanonicalForm.cs  Carrier.cs  Datatypes.cs  Kanonak.Canonical.csproj
kanonak-canonical/csharp/test/Kanonak.Canonical.Conformance/: Kanonak.Canonical.Conformance.csproj  Program.cs
kanonak-canonical/go/: canonical.go  canonical_test.go  go.mod
kanonak-canonical/java/: pom.xml
kanonak-canonical/java/conformance/: Conformance.java
kanonak-canonical/java/src/main/java/org/kanonak/canonical/: CanonicalForm.java  Carrier.java  Datatypes.java
kanonak-canonical/python/: README.md  conformance.py  pyproject.toml
kanonak-canonical/python/kanonak_canonical/: __init__.py
kanonak-canonical/rust/: Cargo.toml  README.md
kanonak-canonical/rust/src/: lib.rs
kanonak-canonical/rust/tests/: conformance.rs
kanonak-canonical/swift/Sources/KanonakCanonical/: CanonicalForm.swift  Datatypes.swift
kanonak-canonical/swift/Tests/KanonakCanonicalTests/: ConformanceTests.swift
kanonak-canonical/typescript/: README.md  package.json  tsconfig.build.json  tsconfig.json
kanonak-canonical/typescript/src/: CanonicalForm.ts  Datatypes.ts  InputModel.ts  conformance.ts  index.ts
kanonak-canonical/vectors/: full-form-vectors.json  lexical-vectors.json
kanonak-codec/csharp/: .gitignore  README.md
kanonak-codec/csharp/src/Kanonak.Codec/: Codec.cs  CodecSchema.cs  Kanonak.Codec.csproj  KanonakNode.cs  Ref.cs  TypedNodes.cs
kanonak-codec/csharp/test/Kanonak.Codec.Conformance/: Kanonak.Codec.Conformance.csproj  Program.cs
kanonak-codec/csharp/test/Kanonak.Codec.Typed.Conformance/: Kanonak.Codec.Typed.Conformance.csproj  Program.cs
kanonak-codec/go/: README.md  codec.go  codec_test.go  go.mod  typed.go  typed_test.go
kanonak-codec/java/: README.md  pom.xml
kanonak-codec/java/conformance/: Conformance.java  TypedConformance.java
kanonak-codec/java/src/main/java/org/kanonak/codec/: Codec.java  CodecSchema.java  JsonNumber.java  KanonakNode.java  PackageContext.java  Ref.java  TypedNodes.java  WireName.java
kanonak-codec/python/: README.md  conformance.py  pyproject.toml
kanonak-codec/python/kanonak_codec/: __init__.py
kanonak-codec/rust/: Cargo.toml  README.md
kanonak-codec/rust/src/: lib.rs  typed.rs
kanonak-codec/rust/tests/: conformance.rs  typed.rs
kanonak-codec/swift/Sources/KanonakCodec/: Codec.swift  JSON.swift  JSONValue.swift  Typed.swift
kanonak-codec/swift/Tests/KanonakCodecTests/: ConformanceTests.swift
kanonak-codec/typescript/: README.md  package.json  tsconfig.json
kanonak-codec/typescript/src/: conformance.ts  index.ts
kanonak-codec/vectors/: codec-vectors-embedded.json  codec-vectors-types.json  codec-vectors.json
kanonak-codec/vectors/gen-embedded-vectors/: Program.cs  gen-embedded-vectors.csproj
kanonak-codec/vectors/gen-types-vectors/: gen.ts
kanonak-codec/wasm/: Cargo.toml  README.md
kanonak-codec/wasm/conformance/: package.json  run.mjs
kanonak-codec/wasm/src/: lib.rs
kanonak-codec/wasm/wit/: codec.wit
kanonak-expression/: README.md
kanonak-expression/csharp/: README.md
kanonak-expression/csharp/src/Kanonak.Expression/: Expression.cs  Kanonak.Expression.csproj
kanonak-expression/csharp/test/Kanonak.Expression.Conformance/: Kanonak.Expression.Conformance.csproj  Program.cs
kanonak-expression/go/: expression.go  expression_test.go  go.mod
kanonak-expression/go/cmd/conformance/: main.go
kanonak-expression/java/: pom.xml
kanonak-expression/java/conformance/: Conformance.java
kanonak-expression/java/src/main/java/org/kanonak/expression/: Expression.java
kanonak-expression/python/: README.md  conformance.py  pyproject.toml
kanonak-expression/python/kanonak_expression/: __init__.py
kanonak-expression/rust/: Cargo.toml  README.md
kanonak-expression/rust/src/: lib.rs
kanonak-expression/rust/tests/: conformance.rs
kanonak-expression/typescript/: package.json
kanonak-expression/typescript/src/: conformance.ts  index.ts
kanonak-expression/vectors/: expression-vectors.json
kanonak-wire/: .gitignore  README.md
kanonak-wire/csharp/: README.md
kanonak-wire/csharp/src/Kanonak.Wire/: Kanonak.Wire.csproj  WireError.cs  WireReader.cs  WireWriter.cs
kanonak-wire/csharp/test/Kanonak.Wire.Conformance/: Kanonak.Wire.Conformance.csproj  Program.cs
kanonak-wire/go/: README.md  go.mod  wire.go  wire_test.go
kanonak-wire/java/: README.md  pom.xml
kanonak-wire/java/conformance/: Conformance.java
kanonak-wire/java/src/main/java/org/kanonak/wire/: WireError.java  WireReader.java  WireWriter.java
kanonak-wire/python/: README.md  conformance.py  pyproject.toml
kanonak-wire/python/kanonak_wire/: __init__.py
kanonak-wire/rust/: Cargo.toml  README.md
kanonak-wire/rust/src/: lib.rs
kanonak-wire/rust/tests/: conformance.rs
kanonak-wire/typescript/: README.md  package.json
kanonak-wire/typescript/src/: conformance.ts  index.ts
kanonak-wire/vectors/: wire-vectors.json
