[package]
name = "kanonak-wire"
version = "0.1.0"
edition = "2021"
authors = ["Kanonak Maintainers (https://github.com/kanonak-protocol/runtime)"]
description = "Kanonak wire kernel (wireFormatVersion 1). Minimal, allocation-conscious binary reader/writer for hot-path wire protocols, verified against the shared golden vectors."
license = "Apache-2.0"
readme = "README.md"
homepage = "https://kanonak.org"
repository = "https://github.com/kanonak-protocol/runtime"

[dependencies]

[dev-dependencies]
serde_json = "1"
